@@ -1,24 +1,33 @@
 package uk.gov.hmcts.sptribs.caseworker.util;
 
+import org.apache.commons.lang.StringUtils;
 import org.springframework.util.CollectionUtils;
 import uk.gov.hmcts.ccd.sdk.type.DynamicListElement;
 import uk.gov.hmcts.ccd.sdk.type.DynamicMultiSelectList;
 import uk.gov.hmcts.ccd.sdk.type.ListValue;
+import uk.gov.hmcts.sptribs.caseworker.model.HearingSummary;
+import uk.gov.hmcts.sptribs.caseworker.model.Listing;
 import uk.gov.hmcts.sptribs.ciccase.model.CaseData;
 import uk.gov.hmcts.sptribs.ciccase.model.CicCase;
 import uk.gov.hmcts.sptribs.document.model.CaseworkerCICDocument;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+import static java.util.Objects.isNull;
+import static org.apache.commons.lang3.ObjectUtils.isEmpty;
 import static uk.gov.hmcts.sptribs.caseworker.util.DecisionDocumentListUtil.getDecisionDocs;
 import static uk.gov.hmcts.sptribs.caseworker.util.DecisionDocumentListUtil.getFinalDecisionDocs;
 import static uk.gov.hmcts.sptribs.caseworker.util.DocumentManagementUtil.buildListValues;
 import static uk.gov.hmcts.sptribs.caseworker.util.OrderDocumentListUtil.getOrderDocuments;
 
 public final class DocumentListUtil {
+
+    private static final String DOCUMENT_BINARY_PATH = "documents/%s/binary";
+
     private DocumentListUtil() {
 
     }
@@ -41,11 +50,12 @@ public final class DocumentListUtil {
 
         List<DynamicListElement> dynamicListElements = docList
             .stream()
-            .filter(CaseworkerCICDocument::isDocumentValidForEmail)
-            .map(doc -> DynamicListElement.builder().label(doc.getDocumentLink().getFilename()
-                + "--" + doc.getDocumentLink().getUrl()
-                + "-- " + doc.getDocumentCategory().getLabel()).code(UUID.randomUUID()).build())
-            .collect(Collectors.toList());
+            .filter(CaseworkerCICDocument::isDocumentValid)
+            .map(doc ->
+                DynamicListElement.builder()
+                    .label(doc.getDocumentCategory().getLabel() + "--" + doc.getDocumentLink().getFilename())
+                    .code(UUID.randomUUID()).build())
+            .toList();
 
         return DynamicMultiSelectList
             .builder()
@@ -54,6 +64,30 @@ public final class DocumentListUtil {
             .build();
     }
 
+    public static DynamicMultiSelectList prepareDocumentList(final CaseData data, String baseUrl) {
+        List<CaseworkerCICDocument> docList = prepareList(data);
+        String apiUrl = baseUrl + DOCUMENT_BINARY_PATH;
+        List<DynamicListElement> dynamicListElements = new ArrayList<>();
+        for (CaseworkerCICDocument doc : docList) {
+            String documentId = StringUtils.substringAfterLast(doc.getDocumentLink().getUrl(),
+                "/");
+            String url = String.format(apiUrl, documentId);
+            DynamicListElement element = DynamicListElement.builder().label("[" + doc.getDocumentLink().getFilename()
+                + " " + doc.getDocumentCategory().getLabel()
+                + "](" + url + ")").code(UUID.randomUUID()).build();
+            dynamicListElements.add(element);
+        }
+
+        return DynamicMultiSelectList
+            .builder()
+            .listItems(dynamicListElements)
+            .value(new ArrayList<>())
+            .build();
+    }
+
+    public static List<ListValue<CaseworkerCICDocument>> getAllCaseDocuments(final CaseData data) {
+        return buildListValues(prepareList(data));
+    }
 
     private static List<CaseworkerCICDocument> getReinstateDocuments(CicCase cicCase) {
         List<CaseworkerCICDocument> reinstateDocList = new ArrayList<>();
@@ -97,12 +131,16 @@ public final class DocumentListUtil {
 
     private static List<CaseworkerCICDocument> getHearingSummaryDocuments(CaseData caseData) {
         List<CaseworkerCICDocument> hearingSummaryDocs = new ArrayList<>();
-        if (null != caseData.getListing() && null != caseData.getListing().getSummary()
-            && !CollectionUtils.isEmpty(caseData.getListing().getSummary().getRecFile())) {
-            for (ListValue<CaseworkerCICDocument> document : caseData.getListing().getSummary().getRecFile()) {
-                hearingSummaryDocs.add(document.getValue());
-            }
-        }
+
+        Stream.ofNullable(caseData.getHearingList())
+            .flatMap(Collection::stream)
+            .map(ListValue::getValue)
+            .filter(hearing -> !isNull(hearing.getSummary()) && !isEmpty(hearing.getSummary().getRecFile()))
+            .map(Listing::getSummary)
+            .map(HearingSummary::getRecFile)
+            .flatMap(Collection::stream)
+            .forEach(recFile -> hearingSummaryDocs.add(recFile.getValue()));
+
         return hearingSummaryDocs;
     }
 
@@ -117,6 +155,4 @@ public final class DocumentListUtil {
     public static List<ListValue<CaseworkerCICDocument>> getAllOrderDocuments(CicCase cicCase) {
         return buildListValues(getOrderDocuments(cicCase));
     }
-
-
 }
