@@ -6,7 +6,6 @@ import uk.gov.hmcts.ccd.sdk.type.DynamicListElement;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public final class DynamicListUtil {
     private DynamicListUtil() {
@@ -20,7 +19,20 @@ public final class DynamicListUtil {
             .stream()
             .sorted()
             .map(summary -> DynamicListElement.builder().label(summary).code(UUID.randomUUID()).build())
-            .collect(Collectors.toList());
+            .toList();
+
+        return DynamicList
+            .builder()
+            .listItems(dynamicListElements)
+            .build();
+    }
+
+    public static DynamicList createDynamicList(List<String> hearingSummary) {
+        List<DynamicListElement> dynamicListElements = hearingSummary
+            .stream()
+            .sorted()
+            .map(hearing -> DynamicListElement.builder().label(hearing).code(UUID.randomUUID()).build())
+            .toList();
 
         return DynamicList
             .builder()
